peach/app/translation-api/config/workload.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Service
metadata:
  name: translation-api
  namespace: blog
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: translation-api
    app.kubernetes.io/part-of: translation-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: translation-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translation-api
  namespace: blog
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: translation-api
    app.kubernetes.io/part-of: translation-api
spec:
  replicas: #@ data.values.replicas
  selector:
    matchLabels:
      app: translation-api
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
        github.com/revision: #@ data.values.git_revision
      labels:
        app: translation-api
        app.kubernetes.io/part-of: translation-api
    spec:
      containers:
      - env:
        - name: JAVA_TOOL_OPTIONS
          value: -XX:ActiveProcessorCount=2 -Dfile.encoding="UTF-8" -Dmanagement.endpoint.health.probes.add-additional-paths="true" -Dmanagement.endpoint.health.show-details="always" -Dmanagement.endpoints.web.base-path="/actuator" -Dmanagement.endpoints.web.exposure.include="*" -Dmanagement.health.probes.enabled="true" -Dmanagement.server.port="8081" -Dserver.port="8080" -Duser.country="JP" -Duser.language="ja" -Duser.timezone="Asia/Tokyo"
        - name: BPL_JVM_THREAD_COUNT
          value: "28"
        - name: INFO_ENV_HOSTNAME
          value: ${HOSTNAME:}
        - name: ENTRY_APIURL
          value: http://blog-api.blog.svc.cluster.local
        - name: SPRING_AI_OPENAI_APIKEY
          valueFrom:
            secretKeyRef:
              key: openai-api-key
              name: translation-config
        - name: GITHUB_ACCESSTOKEN
          valueFrom:
            secretKeyRef:
              key: github-access-token
              name: translation-config
        - name: GITHUB_WEBHOOKSECRET
          valueFrom:
            secretKeyRef:
              key: github-webhook-secret
              name: translation-config
        - name: MANAGEMENT_OTLP_LOGS_ENDPOINT
          value: http://otel-collector.opentelemetry.svc.cluster.local:4318/v1/logs
        - name: MANAGEMENT_OTLP_TRACING_ENDPOINT
          value: http://otel-collector.opentelemetry.svc.cluster.local:4318/v1/traces
        - name: MANAGEMENT_OPENTELEMETRY_RESOURCEATTRIBUTES_HOSTNAME
          value: ${HOSTNAME:}
        - name: SPRING_THREADS_VIRTUAL_ENABLED
          value: "true"
        image: #@ data.values.image
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
        startupProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
          failureThreshold: 20
          periodSeconds: 5
        name: workload
        ports:
        - containerPort: 8080
          name: user-port
          protocol: TCP
        resources:
          limits:
            memory: 416Mi
          requests:
            memory: 416Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1002
          seccompProfile:
            type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: translation-api
              topologyKey: kubernetes.io/hostname
            weight: 1
